<resources>
    <string name="app_name">Malonda</string>
    <string name="first_slide_title">Are you a farmer?</string>
    <string name="first_slide_desc">Worked hard but can\'t find a market?</string>
    <string name="second_slide_title">Create an account</string>
    <string name="second_slide_desc">Upload your products to a digital market place</string>
    <string name="third_slide_title">Easy Customers</string>
    <string name="third_slide_desc">Your potential customers will find you right from your phone</string>
    <string name="get_started_btn">Get Started</string>
    <string name="skip_btn">Skip</string>
    <string name="developedby">Designed by VituMafeni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="all_products_txt">All Products</string>
    <string name="all_orders_txt">All Orders</string>
    <string name="products_counter_txt">10 Products</string>
    <string name="orders_count_txt">10 Orders</string>
    <string name="sales_txt">Sales</string>
    <string name="sales_count_txt">10 Sold</string>
    <string name="settings_txt">Settings</string>
    <string name="my_products_txt">My Products</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_txt">Login</string>
    <string name="enter_email_txt">Enter email</string>
    <string name="enter_password_txt">Enter password</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="enter_phone_txt">Enter phone Ex: +26599XXXXXXX</string>
    <string name="create_account_txt">Create Account</string>
    <string name="enter_firstname_txt">Enter firstname</string>
    <string name="enter_lastname_txt">Enter lastname</string>
    <string name="next_txt">Next</string>
    <string name="select_category_txt">Select Category</string>
    <string name="product_name_txt">Product Name</string>
    <string name="quantity_txt">Quantity</string>
    <string name="price_txt">Price (MWK)</string>
    <string name="description_txt">Description</string>
    <string name="add_product_txt">Add Product</string>
    <string name="threshold_txt">Threshold</string>
    <string name="enter_product_name_txt">Enter product name</string>
    <string name="swipe_left_for_options_txt">Swipe left for options</string>
    <string name="discard_txt">Discard</string>
    <string name="long_press_for_custom_qty_txt">Long press for custom qty</string>
    <string name="product_name_sample_txt">Vaseline</string>
    <string name="stock_remaining_txt">Stock Remaining</string>
    <string name="prod_price">Price</string>
    <string name="logout_txt">Logout</string>
    <string name="my_orders_txt">My Orders</string>
    <string name="apply_vat">Apply VAT</string>
    <string name="total_txt">Total</string>
    <string name="checkout_txt">Checkout</string>
    <string name="pay_txt">Pay</string>
    <string name="notifications_txt">Notifications</string>
    <string name="press_and_hold_item_to_add_txt"><![CDATA[Press & hold item to add]]></string>
    <string name="product_details">Product Details</string>
    <string name="sample_desc">Image result for lorem Lorem ipsum is a name for a common type of placeholder text. Also known as filler or dummy text, this is simply copy that serves to fill a space without actually saying anything meaningful. It\'s essentially nonsense text, but gives an idea of what real words will look like in the final product.</string>
    <string name="sample_category_name_txt">In Fruits</string>
    <string name="google_maps_key">AIzaSyBygKV5ZCY2dsLPIslqjJhcHSxt3HqdHtI</string>
    <string name="neearby_txt">Near by</string>
    <string name="nearby_txt">Near Me</string>
    <string name="trending_txt">Trending</string>
    <string name="suggestions_txt">Suggestions</string>
    <string name="about_app">About App</string>
    <string name="business_info_txt">Business Info</string>
    <string name="bus_name_txt">Business Name</string>
    <string name="pontetial_customers_txt">Your potential customers can only find you after you add business information!</string>
    <string name="warning_txt">Warning</string>
    <string name="add_txt">Add</string>
    <string name="close_txt">Close</string>
    <string name="address_txt">Address</string>
    <string name="map_txt">Map</string>
    <string name="all_products">All Products</string>
    <string name="products_txt">Products</string>
    <string name="view_by_category_txt">View by Category</string>
    <string name="in_category_txt">In Category</string>
    <string name="reports_txt">Reports</string>
    <string name="point_of_sale_txt">Point of Sale</string>
    <string name="payment_method_txt">Payment Method</string>
    <string name="visa_paypal_payment_txt">Card Payment</string>
    <string name="cash_payment_txt">Cash Payment</string>
    <string name="customer_details_txt">Customer Details</string>
    <string name="customer_name_txt">Customer Name</string>
    <string name="search_here_txt">Search here...</string>
    <string name="sale_details">Sale Details</string>
    <string name="customer_phone_txt">Customer Phone</string>
    <string name="farmer_sign_in">Farmer Login</string>
    <string name="finish">Finish</string>
</resources>