<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/customer_details_txt"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_700" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name_txt"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/close_icon"
        app:startIconDrawable="@drawable/product_name_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cusPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_phone_txt"
        app:boxStrokeWidthFocused="1dp"
        app:startIconDrawable="@drawable/phone_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="#000" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/payment_method_txt"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_700" />

    <LinearLayout
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        android:id="@+id/linearCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:src="@drawable/money_icon_24"
            app:tint="@color/purple_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/cash_payment_txt"
            android:textColor="@color/purple_700" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward_icon"
            app:tint="@color/purple_500" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:background="@drawable/ripple_effect"
        android:id="@+id/linearCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:src="@drawable/payment_icon"
            app:tint="@color/purple_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/visa_paypal_payment_txt"
            android:textColor="@color/purple_700" />

        <ImageView
            android:layout_width="wrap_content"

            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward_icon"
            app:tint="@color/purple_500" />
    </LinearLayout>

</LinearLayout>