<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:transitionName="loginTransition"
    tools:context=".common.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:id="@+id/titleLoginc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/create_account_txt"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fnameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleLoginc"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_firstname_txt"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/person_icon"
                    app:startIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lnameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fnameLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_lastname_txt"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/person_icon"
                    app:startIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="text"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lnameLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_phone_txt"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/phone_icon"
                    app:startIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textEmailAddress"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_password_txt"
                    app:boxStrokeColor="#000"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock_icon"
                    app:startIconTint="#000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <Button
                android:id="@+id/loginBtn"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/next_txt"
                android:textColor="@color/white"
                android:transitionName="loginTransition" />


        </RelativeLayout>

    </LinearLayout>
</ScrollView>