<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke2"
    android:orientation="vertical"
    tools:context=".supplier.activities.SaleProductsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp" />

    <!--Top Header Layout-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="8dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:onClick="goBackMxendu"
                android:padding="8dp"
                app:srcCompat="@drawable/arrow_back_icon"
                app:tint="@color/purple_700" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical"
                android:text="@string/sale_details"
                android:textAllCaps="true"
                android:textColor="@color/purple_700"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/circularbordersolid"
            android:elevation="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/customer_details_txt"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700" />

                <LinearLayout
                    android:id="@+id/linearCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerTitle"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/customer_name_txt"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/customerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:src="@drawable/arrow_forward_icon"
                        android:text="Vitumbiko Mafeni"
                        app:tint="@color/purple_500" />
                </LinearLayout>

                <LinearLayout

                    android:id="@+id/linearCashe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearCash"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/customer_phone_txt"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/customerPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:src="@drawable/arrow_forward_icon"
                        android:text="Vitumbiko Mafeni"
                        app:tint="@color/purple_500" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:elevation="8dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:elevation="8dp"
            android:orientation="vertical">

            <!--Top Profile Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/productsAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="16dp"
                    android:text="@string/all_products"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/productWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="No products added"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productsSaleListRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>